chore(deps): update code after review
